--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <title>Timer Competizione</title>
-  <link rel="stylesheet" href="/src/style.css">
+  <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
   <div class="nav">
-    <img class="left" src="/img/descarga.png" width="100px" height="100px">
-    <img class="center" src="/img/WhatsApp Image 2023-09-12 at 3.31.13 PM.jpeg" width="100px" height="100px">
-    <img class="right" src="/img/UTN.jpg" width="100px" height="100px">
+    <img class="left" src="img/descarga.png" width="100px" height="100px">
+    <img class="center" src="img/WhatsApp Image 2023-09-12 at 3.31.13 PM.jpeg" width="100px" height="100px">
+    <img class="right" src="img/UTN.jpg" width="100px" height="100px">
   </div>
   
   <div class="c_light">
@@ -39,6 +39,6 @@
     </table>
   </div>
 
-  <script src="/src/script.js"></script>
+  <script src="src/script.js"></script>
 </body>
 </html>
